# Interpreteur-Boa

./: .gitignore  CMakeLists.txt  NOTE.md  README.md
SolutionCalculette/: Makefile  analyse_lexicale.c  analyse_lexicale.h  analyse_syntaxique.c  ast_construction.c  ast_construction.h  ast_parcours.c  ast_parcours.h  entree1.txt  entree2.txt  test_lexeme.c  type_ast.h
algorithmes/: factoriel.boa  fibonacci.boa  simple.boa
experimental/: syra.py
src/: Makefile  analyse_lexical.c  analyse_lexical.h  analyse_syntaxique.c  analyse_syntaxique.h  ast.c  ast.h  ast_construction.c  ast_construction.h  ast_parcours.c  ast_parcours.h  essai_ast.c  evaluation.c  evaluation.h  interprete.c  lecture_caracteres.c  lecture_caracteres.h  lexical_analyse.c  lexical_analyse.h  list.c  list.h  listes.c  node.c  node.h  stack.c  stack.h  syntax_analyse.c  syntax_analyse.h  test.c  tree.c  tree.h  type_ast.h  variable.c  variable.h  variable.h.gch
test/: plan.boa
test/valid/: premier.boa  premier.py  simple.boa  syracuse.boa  test.boa
